plot updated, references added
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@6853 4525493e-7705-40b1-a816-d608a930855b

--- a/2012/3papers/combined/combined_epl.tex
+++ b/2012/3papers/combined/combined_epl.tex
@@ -25,64 +25,64 @@ G.~Antchev\thanks{INRNE-BAS, Institute for Nuclear Research and Nuclear Energy, 
 \and M.~Csan\'{a}d\inst{4}
 \and T.~Cs\"{o}rg\H{o}\inst{4}
 \and M.~Deile\inst{8}
- \and K.~Eggert\inst{9}
- \and V.~Eremin\thanks{Ioffe Physical - Technical Institute of Russian Academy of Sciences.}
- \and R.~Ferretti\inst{6a,6b}
- \and F.~Ferro\inst{6a}
- \and A. Fiergolski\thanks{Warsaw University of Technology, Poland.}
- \and F.~Garcia\inst{3a}
- \and S.~Giani\inst{8}
- \and V.~Greco\inst{7b,8}
- \and L.~Grzanka\inst{8}\hspace{-0.15cm}\thanks{Institute of Nuclear Physics, Polish Academy of Science, Cracow, Poland.}\addtocounter{footnote}{-2}
- \and J.~Heino\inst{3a}
- \and T.~Hilden\inst{3a,3b}
- \and R.~A.~Intonti\inst{5a}
- \and J.~Ka\v{s}par\inst{1a,8}
- \and J.~Kopal\inst{1a,8}
- \and V.~Kundr\'{a}t\inst{1a}
- \and K.~Kurvinen\inst{3a}
- \and S.~Lami\inst{7a}
- \and G.~Latino\inst{7b}
- \and R.~Lauhakangas\inst{3a}
- \and  T.~Leszko\footnotemark
- %\thanks{Warsaw University of Technology, Poland}
- \and E.~Lippmaa\inst{2}
- \and M.~Lokaj\'{\i}\v{c}ek\inst{1a}
- \and M.~Lo~Vetere\inst{6b,6a}
- \and F.~Lucas~Rodr\'{i}guez\inst{8}
- \and M.~Macr\'{\i}\inst{6a}
- \and T.~M\"aki\inst{3a}
- \and A.~Mercadante\inst{5b,5a}
- \and N.~Minafra\inst{8} 
- \and S.~Minutoli\inst{6a}\addtocounter{footnote}{1}
- \and F.~Nemes\inst{4}\hspace{-0.15cm}\thanks{Department of Atomic Physics, ELTE University, Hungary.}
- \and H.~Niewiadomski\inst{8}
- \and E.~Oliveri\inst{7b}
- \and F.~Oljemark\inst{3a,3b}
- \and R.~Orava\inst{3a,3b}
- \and M.~Oriunno\inst{8}\hspace{-0.15cm}\thanks{SLAC National Accelerator Laboratory, Stanford CA, USA.}
- \and K.~\"{O}sterberg\inst{3a,3b}
- \and P.~Palazzi\inst{7b}
- \and J.~Proch\'{a}zka\inst{1a}
- \and M.~Quinto\inst{5a}
- \and E.~Radermacher\inst{8}
- \and E.~Radicioni\inst{5a}
- \and F.~Ravotti\inst{8}
- \and E.~Robutti\inst{6a}
- \and L.~Ropelewski\inst{8}
- \and G.~Ruggiero\inst{8}
- \and H.~Saarikko\inst{3a,3b}
- \and A.~Santroni\inst{6b,6a}
- \and A.~Scribano\inst{7b}
- \and J.~Smajek\inst{8}
- \and W.~Snoeys\inst{8}
- \and J.~Sziklai\inst{4}
- \and C.~Taylor\inst{9}
- \and N.~Turini\inst{7b}
- \and V.~Vacek\inst{1b}
- \and M.~V\'itek\inst{1b}
- \and J.~Welti\inst{3a,3b}
- \and J.~Whitmore\inst{10}
+\and K.~Eggert\inst{9}
+\and V.~Eremin\thanks{Ioffe Physical - Technical Institute of Russian Academy of Sciences.}
+\and R.~Ferretti\inst{6a,6b}
+\and F.~Ferro\inst{6a}
+\and A. Fiergolski\thanks{Warsaw University of Technology, Poland.}
+\and F.~Garcia\inst{3a}
+\and S.~Giani\inst{8}
+\and V.~Greco\inst{7b,8}
+\and L.~Grzanka\inst{8}\hspace{-0.15cm}\thanks{Institute of Nuclear Physics, Polish Academy of Science, Cracow, Poland.}\addtocounter{footnote}{-2}
+\and J.~Heino\inst{3a}
+\and T.~Hilden\inst{3a,3b}
+\and R.~A.~Intonti\inst{5a}
+\and J.~Ka\v{s}par\inst{1a,8}
+\and J.~Kopal\inst{1a,8}
+\and V.~Kundr\'{a}t\inst{1a}
+\and K.~Kurvinen\inst{3a}
+\and S.~Lami\inst{7a}
+\and G.~Latino\inst{7b}
+\and R.~Lauhakangas\inst{3a}
+\and  T.~Leszko\footnotemark
+%\thanks{Warsaw University of Technology, Poland}
+\and E.~Lippmaa\inst{2}
+\and M.~Lokaj\'{\i}\v{c}ek\inst{1a}
+\and M.~Lo~Vetere\inst{6b,6a}
+\and F.~Lucas~Rodr\'{i}guez\inst{8}
+\and M.~Macr\'{\i}\inst{6a}
+\and T.~M\"aki\inst{3a}
+\and A.~Mercadante\inst{5b,5a}
+\and N.~Minafra\inst{8} 
+\and S.~Minutoli\inst{6a}\addtocounter{footnote}{1}
+\and F.~Nemes\inst{4}\hspace{-0.15cm}\thanks{Department of Atomic Physics, ELTE University, Hungary.}
+\and H.~Niewiadomski\inst{8}
+\and E.~Oliveri\inst{7b}
+\and F.~Oljemark\inst{3a,3b}
+\and R.~Orava\inst{3a,3b}
+\and M.~Oriunno\inst{8}\hspace{-0.15cm}\thanks{SLAC National Accelerator Laboratory, Stanford CA, USA.}
+\and K.~\"{O}sterberg\inst{3a,3b}
+\and P.~Palazzi\inst{7b}
+\and J.~Proch\'{a}zka\inst{1a}
+\and M.~Quinto\inst{5a}
+\and E.~Radermacher\inst{8}
+\and E.~Radicioni\inst{5a}
+\and F.~Ravotti\inst{8}
+\and E.~Robutti\inst{6a}
+\and L.~Ropelewski\inst{8}
+\and G.~Ruggiero\inst{8}
+\and H.~Saarikko\inst{3a,3b}
+\and A.~Santroni\inst{6b,6a}
+\and A.~Scribano\inst{7b}
+\and J.~Smajek\inst{8}
+\and W.~Snoeys\inst{8}
+\and J.~Sziklai\inst{4}
+\and C.~Taylor\inst{9}
+\and N.~Turini\inst{7b}
+\and V.~Vacek\inst{1b}
+\and M.~V\'itek\inst{1b}
+\and J.~Welti\inst{3a,3b}
+\and J.~Whitmore\inst{10}
 }
 
 \shortauthor{The TOTEM Collaboration (G.~Antchev \etal)}
@@ -146,30 +146,28 @@ of (73.5 0.6stat +1.8
 \section{Introduction}
 
 
-The papers \cite{epl96} and \cite{P1} presented two analyses of $\rm pp$ elastic scattering, determining the integral elastic cross-section $\sigma_{\rm el}$ and the intercept of the differential cross-section $\d\sigma_{\rm el}/\d t|_{0}$. These quantities can be related to the total cross-section $\sigma_{\rm tot}$ and the inelatic cross-section $\sigma_{\rm inel}$ via the optical theorem:
+In the previous TOTEM papers \cite{epl96,P1} the differential cross-section for elastic proton-proton scattering was presented as a function of the four-momentum transfer squared $t$. By extrapolation to $t=0$, the cross-section $\d\sigma_{\rm el}/\d t|_{0}$ at the optical point was determined. Integrating the differential distribution yields the integrated elastic cross-section $\sigma_{\rm el}$. Applying the optical theorem, the total and the inelastic proton-proton cross-sections were derived with a slight dependence on the $\rho$ parameter (the ratio of the real to the imaginary part of the forward hadronic scattering amplitude):
 \begin{equation}
 \label{eq:m el}
 	\sigma_{\rm tot}^2 = {16\pi\, (\hbar c)^2\over 1 + \rho^2}\, \left. \d\sigma_{\rm el}\over\d t\right|_0\ ,\qquad
 	\sigma_{\rm inel} = \sigma_{\rm tot} - \sigma_{\rm el}\ .
 \end{equation}
-The results for the low-luminosity measurement \cite{epl96} and the higher-luminosity measurement \cite{P1} are summarized in Tab.~\ref{tab:cs}.
+The results for the low-luminosity measurement \cite{epl96} and the higher-luminosity measurement \cite{P1} are summarized in Tab.~\ref{tab:cs}. These cross-sections are exclusively based on the measurement of the elastic scattering cross-section.
 
-For the $\rho$ parameter in Eq.~(\ref{eq:m el}) (the ratio of the real to the imaginary of the forward hadronic scattering amplitude), the COMPETE extrapolation \cite{compete} was used. Since this is only an extrapolation, a $\rho$-independent cross-sections will be presented and the value of $\rho$ will be constrained too.
+However, taking advantage of the two triggerable forward charged-particle detectors, the inelastic cross-section was also directly measured by the inelastic rate \cite{P2} using the same data set as in \cite{P1}. A small Monte-Carlo correction ($\approx 3\%$) had to be applied to account for the non-visible events in the very forward cone $|\eta| > 6.5$ mainly due to single diffraction.
 
-In the paper \cite{P2}, the inelastic cross-section was determined from the same dataset as the elastic measurements in paper \cite{P1}. This enables for deriving further quantities, which is the subject of this paper. The elastic and inelastic measurements can be combined in several ways, each time eliminating some of the uncertainty factors ($\rho$, luminosity, etc.).
+The excellent agreement between the two completely different measurements of the inelastic cross-sections confirms the understanding of the systematic uncertainties and corrections applied in both methods. Taking maximum advantage of the two measurements by combining them in different ways allows extracting more information from the data, such as:
+\begin{itemize}
+\item luminosity independent cross-sections
+\item luminosity determination
+\item independent cross-sections
+\item $\rho$ constraints
+\item luminosity independent cross-section ratios
+\end{itemize}
 
-This paper is mostly based on the data collected in a run in October 2011. That run was split into three datasets with Roman Pot detectors at different positions (for details see Tab.~1 in \cite{P1}). All calculations were done independently for these three datasets, showing an excellent match. Therefore only the results for the three datasets combined will be given below. For completeness, some of the results will be compared to those of \cite{epl96}, obtained from a run from June 2011, where only the elastic part of the analysis could be performed.
-
-
-%--------------------------------------------------
-\section{$\rho$-independent quantities}
-
-Summing the elastic cross-section from \cite{P1} and the inelastic cross-section from \cite{P2} yields total cross-section
-\begin{equation}
-\label{eq:m rho indep}
-\sigma_{\rm tot} = \sigma_{\rm el} + \sigma_{\rm inel}
-\end{equation}
-which is manifestly $\rho$-independent. It evaluates to $\sigma_{\rm tot} = (99.1 \pm 4.3)\un{mb}$ (for details on the uncertainty composition see Tab.~\ref{tab:cs}). Apart from that, one can determine cross-section ratios which are moreover independent from the luminosity uncertainty: $\sigma_{\rm el} / \sigma_{\rm inel} = 0.345 \pm 0.009$ and $\sigma_{\rm el} / \sigma_{\rm tot} = 0.257 \pm 0.005$. TODO: link to the conclusion/interpretation
+This article is based on the data collected in October 2011 (for details see Tab.~1 in \cite{P1}).
+%That run was split into three datasets with Roman Pot detectors at different positions (for details see Tab.~1 in \cite{P1}). All calculations were done independently for these three datasets, showing an excellent match. Therefore only the results for the three datasets combined will be given below.
+For completeness, some of the results will be compared to those of the low-luminosity run from June 2011 \cite{epl96}, where only the elastic part of the analysis could be performed.
 
 
 %--------------------------------------------------
@@ -182,39 +180,7 @@ Using the optical theorem, one can combine the elastic measurements from \cite{P
 \end{equation}
 Taking the COMPETE \cite{compete} preferred-model extrapolation $\rho = 0.141\pm 0.007$ yields $\sigma_{\rm tot} = (98.0 \pm 2.5)\un{mb}$.
 
-One can use the luminosity-independent ratio $\sigma_{\rm el} / \sigma_{\rm inel}$ from the previous section to calculate the luminosity-independent $\sigma_{\rm inel} = (72.9 \pm 1.5)\un{mb}$ and $\sigma_{\rm el} = (25.1 \pm 1.1)\un{mb}$. All these cross-section values and their uncertainty compositions are summarized in Tab.~\ref{tab:cs}. TODO: ref to figure \ref{fig:cs}?
-
-
-\begin{figure*}
-\begin{center}
-\includegraphics[width=18cm]{fig/sigma_tot_el_inel_cmp_big.pdf}
-%\vskip-5mm
-\caption{TODO: Caption, references: PDG, ATLAS, CMS, ALICE and Auger}
-\label{fig:cs}
-\end{center}
-\end{figure*}
-
-
-
-\begin{largetable}
-\caption{Cross-section summary. The statistical uncertainties are negligible and therefore omitted. The systematic uncertainty contributions are grouped into several categories -- el (from the elastic-scattering analysis), inel (from the inelastic-scattering analysis), lumi (from the $4\%$ uncertainty of the CMS luminosity measurement) and rho (from the COMPETE preferred-model $\rho$ extrapolation uncertainty of $\pm 0.007$)
--- together forming the full systematic uncertainty.
-}
-\label{tab:cs}
-\small
-\setlength{\tabcolsep}{1pt}
-\def\ColSep{15pt}
-\begin{tabular}{cc@{\hskip\ColSep}rl @{\hskip\ColSep}cccc@{$\Rightarrow$}c @{\hskip\ColSep}cccc@{$\Rightarrow$}c @{\hskip\ColSep}cccc@{$\Rightarrow$}c}
-%&\multispan{17}\hrulefill\cr
-\hline
-&&\multispan2\hss elastic only (Eq.~(\ref{eq:m el})) \hss &\multispan5\hss elastic only (Eq.~(\ref{eq:m el}))\hss &\multispan5\hss $\rho$-independent (Eq.~(\ref{eq:m rho indep}))\hss &\multispan5\hss ${\cal L}_{\rm int}$-independent (Eq.~(\ref{eq:m lumi indep}))\hss\cr
-&&\multispan2\hss June 2011, Ref.~\cite{epl96} \hss &\multispan5\hss October 2011, Ref.~\cite{P1}\hss &\multispan5\hss October 2011\hss &\multispan5\hss October 2011\hss\cr\hline
-&&& full &&    el & lumi & rho & full &&    el & inel & lumi & full &&    el & inel & rho & full\cr\hline
-$\sigma_{\rm tot}$ & $\rm[mb]$  & $\qquad98.3$ & $\pm 2.8$ &   $98.6$ & $\pm 1.0$ & $\pm 2.0$ & $\pm 0.1$ & $\pm 2.2$  &   $99.1$ & $\pm 0.3$ & $\pm 1.7$ & $\pm 4.0$ & $\pm 4.3$ & $98.0$ & $\pm 1.8$ & $\pm 1.7$ & $\pm 0.2$ & $\pm 2.5$\cr
-$\sigma_{\rm inel}$ & $\rm[mb]$ & $\qquad73.5$ & $\pm 1.6$ &   $73.2$ & $\pm 0.8$ & $\pm 1.0$ & $\pm 0.1$ & $\pm 1.3$  &   $73.7$ &           & $\pm 1.7$ & $\pm 3.0$ & $\pm 3.4$ & $72.9$ & $\pm 1.1$ & $\pm 0.9$ & $\pm 0.1$ & $\pm 1.5$\cr
-$\sigma_{\rm el}$ & $\rm[mb]$   & $\qquad24.8$ & $\pm 1.2$ &   $25.4$ & $\pm 0.3$ & $\pm 1.0$ &           & $\pm 1.1$  &   $25.4$ & $\pm 0.3$ &           & $\pm 1.0$ & $\pm 1.1$ & $25.1$ & $\pm 0.6$ & $\pm 0.9$ & $\pm 0.0$ & $\pm 1.1$\cr\hline
-\end{tabular}
-\end{largetable}
+One can use the luminosity-independent ratio $\sigma_{\rm el} / \sigma_{\rm inel}$ from the previous section to calculate the luminosity-independent $\sigma_{\rm inel} = (72.9 \pm 1.5)\un{mb}$ and $\sigma_{\rm el} = (25.1 \pm 1.1)\un{mb}$. All these cross-section values and their uncertainty compositions are summarized in Tab.~\ref{tab:cs}.
 
 
 
@@ -250,6 +216,17 @@ ${\cal L}_{\rm int}^{\rm June} = (1.65 \pm 0.07)\un{\mu b^{-1}}$. TODO: comments
 TODO: trend of CMS/TOTEM lumi ratio from June to October
 
 
+%--------------------------------------------------
+\section{$\rho$-independent quantities}
+
+Summing the elastic cross-section from \cite{P1} and the inelastic cross-section from \cite{P2} yields total cross-section
+\begin{equation}
+\label{eq:m rho indep}
+\sigma_{\rm tot} = \sigma_{\rm el} + \sigma_{\rm inel}
+\end{equation}
+which is manifestly $\rho$-independent. It evaluates to $\sigma_{\rm tot} = (99.1 \pm 4.3)\un{mb}$ (for details on the uncertainty composition see Tab.~\ref{tab:cs}). Apart from that, one can determine cross-section ratios which are moreover independent from the luminosity uncertainty: $\sigma_{\rm el} / \sigma_{\rm inel} = 0.345 \pm 0.009$ and $\sigma_{\rm el} / \sigma_{\rm tot} = 0.257 \pm 0.005$. TODO: link to the conclusion/interpretation
+
+
 
 %--------------------------------------------------
 \section{Rho determination}
@@ -261,12 +238,61 @@ The elastic (from \cite{P1}) and inelastic (from \cite{P2}) measurements can be 
 \end{equation}
 yielding $\rho^2 = 0.009 \pm 0.056$ (mean and standard deviation). This estimate can not be translated into terms of $\rho$ in a straight-forward manner since an important part of the $\rho^2$ distribution extends to negative values, where square root is not defined. Instead, we calculated that at $95\%$ confidence level $\rho^2 < 0.10$. This upper bound can be equally expressed as $\rho < 0.32$. Alternatively, one can pursue the Bayes' approach to estimate $|\rho|$. Taking a uniform prior $|\rho|$ distribution yields a posterior distribution with mean $0.145$ and standard deviation $0.091$.
 
-TODO: dispersion relation determination of rho? Need to use the rho-indep sigma tot to avoid loop
+
+%--------------------------------------------------
+\section{Result summary}
+
+As shown above, the cross-sections can be obtained directly from the elastic scattering measurement, but also in combination with the inelastic rate eliminating  the dependence on either the luminosity or $\rho$. The total, elastic and inelastic cross-sections together with their individual uncertainties are summarized in Tab.~\ref{tab:cs} and also shown for comparison in Fig.~\ref{fig:cs}. All results are in excellent agreement with each other. In particular, the inelastic cross-section arising from two completely independent measurements with the Roman Pot detectors in the very forward region close to the beams and with the charged-particle telescopes more central agree remarkably well, giving confidence in the trigger, acceptance and analysis.
+
+The energy dependence of the proton-proton cross-sections is shown in Fig.~\ref{fig:cs}. The best fit of $\sigma_{\rm tot}(s)$ by the COMPETE Collaboration \cite{compete} (before the TOTEM result) describes the energy dependence well even up to the highest energies. The energy dependence of the elastic cross-section is fitted by TOTEM.
+
+\begin{figure*}
+\begin{center}
+\includegraphics{fig/sigma_tot_el_inel_cmp_big.pdf}
+%\vskip-5mm
+\caption{Left: the dependences of total (red), inelastic (blue) and elastic (green) cross-sections on the scattering energy $\sqrt s$. The continuous black lines (lower for $\rm pp$, upper for $\rm \bar pp$) represent the best fits of the total cross-section data by the COMPETE collaboration \cite{compete}. The dashed line results from a fit of the elastic scattering data. The dash-dotted curves correspond to the inelastic cross-section and were obtained as the difference between the continuos and dashed fits.\hfil\break
+Right: measurements of total (red), inelastic (blue) and elastic (green) cross-sections at $\sqrt s = 7\un{TeV}$. The circles represent the four TOTEM measurements summarized in Tab.~\ref{tab:cs} (weighted mean given by the dotted line), the other points show the measurements of other LHC collaborations.}
+\label{fig:cs}
+\end{center}
+\end{figure*}
+
+
+
+\begin{largetable}
+\caption{Cross-section summary. The statistical uncertainties are negligible and therefore omitted. The systematic uncertainty contributions are grouped into several categories -- \emph{el} (from the elastic-scattering analysis), \emph{inel} (from the inelastic-scattering analysis), \emph{lumi} (from the $4\%$ uncertainty of the CMS luminosity measurement) and \emph{rho} (from the COMPETE preferred-model $\rho$ extrapolation uncertainty of $\pm 0.007$)
+-- together forming the \emph{full} systematic uncertainty (components combined in quadrature, including their correlations).
+}
+\label{tab:cs}
+\small
+\setlength{\tabcolsep}{1pt}
+\def\ColSep{15pt}
+\begin{tabular}{cc@{\hskip\ColSep}rl @{\hskip\ColSep}cccc@{$\Rightarrow$}c @{\hskip\ColSep}cccc@{$\Rightarrow$}c @{\hskip\ColSep}cccc@{$\Rightarrow$}c}
+%&\multispan{17}\hrulefill\cr
+\hline
+&&\multispan2\hss elastic only (Eq.~(\ref{eq:m el})) \hss &\multispan5\hss elastic only (Eq.~(\ref{eq:m el}))\hss &\multispan5\hss ${\cal L}_{\rm int}$-independent (Eq.~(\ref{eq:m lumi indep}))\hss &\multispan5\hss $\rho$-independent (Eq.~(\ref{eq:m rho indep}))\hss\cr
+&&\multispan2\hss June 2011, Ref.~\cite{epl96} \hss &\multispan5\hss October 2011, Ref.~\cite{P1}\hss &\multispan5\hss October 2011\hss &\multispan5\hss October 2011\hss\cr\hline
+                    &           &              & full        &          &    el     & lumi      & rho       & full        &          &    el     & inel      & rho       & full        &          &    el     & inel      & lumi      & full      \cr\hline
+$\sigma_{\rm tot}$  & $\rm[mb]$ & $\qquad98.3$ & $\pm 2.8$   &   $98.6$ & $\pm 1.0$ & $\pm 2.0$ & $\pm 0.1$ & $\pm 2.2$   &   $98.0$ & $\pm 1.8$ & $\pm 1.7$ & $\pm 0.2$ & $\pm 2.5$   &   $99.1$ & $\pm 0.3$ & $\pm 1.7$ & $\pm 4.0$ & $\pm 4.3$ \cr
+$\sigma_{\rm inel}$ & $\rm[mb]$ & $\qquad73.5$ & $\pm 1.6$   &   $73.2$ & $\pm 0.8$ & $\pm 1.0$ & $\pm 0.1$ & $\pm 1.3$   &   $72.9$ & $\pm 1.1$ & $\pm 0.9$ & $\pm 0.1$ & $\pm 1.5$   &   $73.7$ &           & $\pm 1.7$ & $\pm 3.0$ & $\pm 3.4$ \cr
+$\sigma_{\rm el}$   & $\rm[mb]$ & $\qquad24.8$ & $\pm 1.2$   &   $25.4$ & $\pm 0.3$ & $\pm 1.0$ &           & $\pm 1.1$   &   $25.1$ & $\pm 0.6$ & $\pm 0.9$ & $\pm 0.0$ & $\pm 1.1$   &   $25.4$ & $\pm 0.3$ &           & $\pm 1.0$ & $\pm 1.1$ \cr\hline
+\end{tabular}
+\end{largetable}
+
+
+
+\begin{figure}
+\onefigure{fig_el/sigma_el_to_sigma_tot.pdf}
+\vskip-5mm
+\caption{(Color online) The ratio of the elastic to total cross-section as a function of the scattering energy $\sqrt s$. TODO: fit ??, REMOVE?}
+\label{fig:sigma rat}
+\end{figure}
+
+TODO: $\sigma_{\rm el} / \sigma_{\rm inel}$ -- indicates the ``shape'' of the proton; need interpretation for the ratio growing with $\sqrt s$
 
 
 
 %--------------------------------------------------
-\section{Cosmic ray relevance}
+\section{Relevance for Cosmic Ray measurements}
 
 ~
 
@@ -276,25 +302,6 @@ TODO: direct pp cross-section instead of nuclei+Glauber
 
 TODO
 	
-
-
-%--------------------------------------------------
-\section{Conclusions}
-
-~
-
-\begin{figure}
-\onefigure{fig_el/sigma_el_to_sigma_tot.pdf}
-\vskip-5mm
-\caption{(Color online) The ratio of the elastic to total cross-section as a function of the scattering energy $\sqrt s$. TODO: fit ??}
-\label{fig:sigma rat}
-\end{figure}
-
-TODO: $\sigma_{\rm el} / \sigma_{\rm inel}$ -- indicates the ``shape'' of the proton; need interpretation for the ratio growing with $\sqrt s$
-
-
-
-
 
 
 %--------------------------------------------------
@@ -312,20 +319,6 @@ Acknowledgements -- Insert here the text.
 	\Name{Antchev G.~{\it et al.}~(TOTEM Collaboration)}
 	\REVIEW{Europhys.~Lett.}{96}{2011}{21002}
 
-\bibitem{epl95}
-    %Proton-proton elastic scattering at the LHC energy of \sqrt{s} = 7 TeV, Europhys. Lett. 95 (2011) 41001,CERN-PH-EP-2011-101 
-	\Name{Antchev G.~{\it et al.}~(TOTEM Collaboration)}
-	\REVIEW{Europhys.~Lett.}{95}{2011}{41001}
-
-\bibitem{jinst}
-    %The TOTEM Experiment at the CERN Large Hadron Collider, JINST 3 S08007, 2008
-	\Name{Anelli G.~{\it et al.}~(TOTEM Collaboration)}
-	\REVIEW{JINST}{3}{2008}{S08007}
-
-\bibitem{compete} 
-	\Name{Cudell~J.~R.~{\it et al.} (COMPETE Collaboration)}
-	\REVIEW{Phys.\ Rev.\ Lett.}{89}{2002}{201801}
-
 \bibitem{P1} 
 	\Name{Antchev G.~{\it et al.}~(TOTEM Collaboration)}
 	\REVIEW{Europhys.~Lett.}{TODO}{2012}{TODO}
@@ -334,9 +327,46 @@ Acknowledgements -- Insert here the text.
 	\Name{Antchev G.~{\it et al.}~(TOTEM Collaboration)}
 	\REVIEW{Europhys.~Lett.}{TODO}{2012}{TODO}
 
+%\bibitem{epl95}
+%    %Proton-proton elastic scattering at the LHC energy of \sqrt{s} = 7 TeV, Europhys. Lett. 95 (2011) 41001,CERN-PH-EP-2011-101 
+%	\Name{Antchev G.~{\it et al.}~(TOTEM Collaboration)}
+%	\REVIEW{Europhys.~Lett.}{95}{2011}{41001}
+
+%\bibitem{jinst}
+%    %The TOTEM Experiment at the CERN Large Hadron Collider, JINST 3 S08007, 2008
+%	\Name{Anelli G.~{\it et al.}~(TOTEM Collaboration)}
+%	\REVIEW{JINST}{3}{2008}{S08007}
+
+\bibitem{compete} 
+	\Name{Cudell~J.~R.~{\it et al.} (COMPETE Collaboration)}
+	\REVIEW{Phys.\ Rev.\ Lett.}{89}{2002}{201801}
+
 \bibitem{pdg} 
 	\Name{Nakamura K.~\etal{} (Particle Data Group)}
 	\REVIEW{J.~Phys.}{G37}{2010}{075021}
+
+\bibitem{alice inel}
+%Measurement of inelastic, single- and double-diffraction cross sections in proton-proton collisions at the LHC with ALICE
+	\Name{ALICE Collaboration}
+	CERN-PH-EP-2012-238
+
+\bibitem{atlas inel}
+%arXiv:1104.0326; CERN-PH-EP-2011-047
+%Measurement of the Inelastic Proton-Proton Cross-Section at s√=7 TeV with the ATLAS Detector
+	\Name{ATLAS Collaboration}
+	\REVIEW{Nature Commun.}{2}{2011}{463}
+
+\bibitem{cms inel}
+	\Name{Zsigmond, A.~J.~(CMS collaboration)}
+	{\it Inelastic proton-proton cross section measurements in CMS at $\sqrt s = 7\un{TeV}$}, 
+	presented at {\it XX International Workshop on Deep-Inelastic Scattering and Related Subjects}, Bonn, Germany, 26-30 March 2012.
+	arXiv:1205.3142
+
+\bibitem{auger}
+%title = {Measurement of the Proton-Air Cross Section at $\sqrt{s}\mathbf{=}57\text{\,}\text{\,}\mathrm{TeV}$ with the Pierre Auger Observatory},
+%url = {http://link.aps.org/doi/10.1103/PhysRevLett.109.062002},
+	\Name{Pierre Auger Collaboration}
+	\REVIEW{Phys.\ Rev.\ Lett.}{109}{2012}{062002}
 
 
 
